--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+li {
+  margin: 16px 0;
+  background: rgba(185, 206, 208, 0.3);
+  padding: 2px;
+}
