created the small 7d graph for each coin and the bar fill for 24 Volume / Market Cap and Circulating Coins / Total Supply. Also tried out colors.js in order to grab the dominant color from the icon and then make the color of the bar match the coin icon. However its not the most consistent, need to find something new but for now its better than a single consistent color.

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,15 @@ li {
   cursor: pointer;
 }
 
+svg {
+  stroke-width: 1.5;
+}
+
+path {
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
 .w-half {
   width: 45.3vw
 }
@@ -24,13 +33,12 @@ li {
   margin-left: 72px;
 }
 
-svg {
-  stroke-width: 1.5;
+.h-82 {
+  height: 22rem;
 }
 
-path {
-  stroke-linecap: round;
-  stroke-linejoin: round;
+.opaque-orange {
+  background: rgba(249 115 22 0.5);
 }
 
 @layer base {
