created the compare function and cleaned up the UI on the nav bar. Also, refactored the graphs into their own components

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,10 @@ path {
   background: rgba(249 115 22 0.5);
 }
 
+.value-comp-tool {
+  color: #DA5BA5;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
