--- a/app/globals.css
+++ b/app/globals.css
@@ -103,10 +103,24 @@ path {
 }
 
 .date-cal {
-  padding: 3px;
+  padding: 2px 0px;
   text-align: center;
   border-radius: 16px;
   caret-color: white;
+  width: 90px;
+  font-size: 12px;
+}
+@media (min-width: 768px) {
+  .date-cal {
+    width: 100px;
+  font-size: 12px;
+  }
+}
+@media (min-width: 1390px) {
+  .date-cal {
+    width: 140px;
+    font-size: 16px;
+  }
 }
 
 .react-datepicker {
@@ -153,6 +167,55 @@ path {
 .react-datepicker-popper {
   z-index: 1000 !important;
   position: absolute !important;
+}
+
+.left-add-asset {
+  left: 17.5%;
+}
+
+.buy-with-abs {
+  left: 0%;
+  top: 100%;
+}
+
+.left-emblem {
+  top: 4%;
+  left: 86.5%;
+}
+
+@media (min-width: 640px) {
+  .left-emblem {
+    top: 4%;
+    left: 90%;
+  }
+}
+
+.sticky-add {
+  position: sticky;
+  left: 82%;
+  bottom: 12%;
+}
+
+.bank-abs {
+  left: 81%;
+  top: 8%
+}
+
+@media (min-width: 640px) {
+  .bank-abs {
+    left: 90%;
+    top: 8%
+  }
+}
+
+.sticky-nav {
+  position: sticky;
+  bottom: 0%;
+  left: 50%;
+}
+
+.port-height {
+  height: 100vh;
 }
 
 .loading {
