--- a/app/globals.css
+++ b/app/globals.css
@@ -38,8 +38,11 @@ path {
 
 .lg-mx-22 {
   margin: 20px 2px;
+  @media (min-width: 768px) {
+    margin: 20px 40px;
+  }
   @media (min-width: 1024px) {
-    margin: 20px 74px;
+    margin: 20px 112px;
   }
 }
 
