fixed the minigraph info to show it at all times so it looks better. Alignment accross the board fixed as far as my knowledge, alltime high and alltime low is added to individual coin page

--- a/app/globals.css
+++ b/app/globals.css
@@ -237,9 +237,10 @@ path {
 }
 
 .sticky-nav {
-  position: sticky;
+  position: fixed;
   bottom: 0%;
-  left: 50%;
+  left: 0%;
+  width: 100%
 }
 
 .port-height {
@@ -263,86 +264,124 @@ path {
 }
 
 .w-number {
-  width: 2.5%;
-}
-
-.w-filter {
-  width: 68%;
-}
-
-@media (min-width: 730px) {
-  .w-filter {
-    width: 65%;
-  }
+  width: 3%;
 }
 
 @media (min-width: 1280px) {
-  .w-filter {
-    width: 41%;
+  .w-number {
+    width: 2.5%;
   }
 }
 
 .w-name {
-  width: 55%;
+  width: 33%;
+}
+
+@media (min-width: 640px) {
+  .w-name {
+    width: 30%;
+  }
 }
 
 @media (min-width: 768px) {
   .w-name {
-    width: 30.8%;
-  }
-}
-
-.w-price {
-  width: 45%;
-}
-
-@media (min-width: 640px) {
-  .w-price {
     width: 20%;
   }
 }
 
+@media (min-width: 1280px) {
+  .w-name {
+    width: 15%;
+  }
+}
+
+.w-price {
+  width: 33%;
+}
+
+@media (min-width: 640px) {
+  .w-price {
+    width: 25%;
+  }
+}
+
+@media (min-width: 768px) {
+  .w-price {
+    width: 15%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .w-price {
+    width: 10%;
+  }
+}
+
 .w-1h {
-  width: 14%;
+  width: 10%;
+}
+
+@media (min-width: 1280px) {
+  .w-1h {
+    width: 5%;
+  }
 }
 
 .w-24h {
-  width: 14%;
+  width: 10%;
+}
+
+@media (min-width: 1280px) {
+  .w-24h {
+    width: 5%;
+  }
 }
 
 .w-7d {
-  width: 14%;
+  width: 10%;
+}
+
+@media (min-width: 1280px) {
+  .w-7d {
+    width: 5%;
+  }
 }
 
 .w-volume {
-  width: 15%
+  width: 16%
 }
 
-@media (min-width: 1480px) {
+@media (min-width: 1570px) {
   .w-volume {
-    width: 17.5%;
+    width: 18%;
   }
 }
 
-@media (min-width: 1820px) {
+@media (min-width: 1750px) {
   .w-volume {
-    width: 19.2%;
+    width: 20%;
   }
-}
-
-.w-circ {
-  width: 20%
 }
 
 .w-last7 {
-  width: 16%;
-  margin-left: 16px;
+  width: 33%;
+}
+
+@media (min-width: 640px) {
+  .w-last7 {
+    width: 22%;
+  }
 }
 
 @media (min-width: 768px) {
   .w-last7 {
-    width: 8.8%;
-    margin-left: 0;
+    width: 15%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .w-last7 {
+    width: 9%;
   }
 }
 
