Revert "fixes mentioned by group"

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,21 +24,6 @@ path {
   stroke-linejoin: round;
 }
 
-@keyframes blink {
-  0% { opacity: 0.9; }
-  25% { opacity: 0.6; }
-  50% { opacity: 0.2; }
-  75% {opacity: 0.6;}
-  100% { opacity: 0.9; }
-}
-
-.blinking-load {
-  animation-name: blink;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-}
-
 .w-half {
   width: 41.5vw
 }
@@ -53,9 +38,6 @@ path {
 
 .lg-mx-22 {
   margin: 20px 2px;
-  @media (min-width: 768px) {
-    margin: 20px 2px;
-  }
   @media (min-width: 1024px) {
     margin: 20px 74px;
   }
@@ -187,14 +169,18 @@ path {
   position: absolute !important;
 }
 
+.left-add-asset {
+  left: 17.5%;
+}
+
 .buy-with-abs {
   left: 0%;
   top: 100%;
 }
 
 .left-emblem {
-  top: 5%;
-  left: 89%;
+  top: 4%;
+  left: 86.5%;
 }
 
 @media (min-width: 640px) {
@@ -233,10 +219,9 @@ path {
 }
 
 .sticky-nav {
-  position: fixed;
+  position: sticky;
   bottom: 0%;
-  left: 0%;
-  width: 100%
+  left: 50%;
 }
 
 .port-height {
@@ -251,189 +236,97 @@ path {
   border-top-color: white;
   animation: spin 0.3s ease-in-out infinite;
   position: absolute;
-  top: 85%;
+  top: 50%;
   left: 50%;
 }
 
-.filter-focus {
-  transform: translate(-50%, -50%);
+.w-number {
+  width: 2.5%;
 }
 
-.w-number {
-  width: 3%;
+.w-filter {
+  width: 68%;
+}
+
+@media (min-width: 730px) {
+  .w-filter {
+    width: 65%;
+  }
 }
 
 @media (min-width: 1280px) {
-  .w-number {
-    width: 2.5%;
+  .w-filter {
+    width: 41%;
   }
 }
 
 .w-name {
-  width: 33%;
-}
-
-@media (min-width: 640px) {
-  .w-name {
-    width: 30%;
-  }
+  width: 55%;
 }
 
 @media (min-width: 768px) {
   .w-name {
-    width: 20%;
-  }
-}
-
-@media (min-width: 1280px) {
-  .w-name {
-    width: 15%;
+    width: 30.8%;
   }
 }
 
 .w-price {
-  width: 33%;
+  width: 45%;
 }
 
 @media (min-width: 640px) {
   .w-price {
-    width: 25%;
-  }
-}
-
-@media (min-width: 768px) {
-  .w-price {
-    width: 15%;
-  }
-}
-
-@media (min-width: 1280px) {
-  .w-price {
-    width: 10%;
-  }
-}
-
-.w-1h {
-  width: 10%;
-}
-
-@media (min-width: 1280px) {
-  .w-1h {
-    width: 5%;
-  }
-}
-
-.w-24h {
-  width: 10%;
-}
-
-@media (min-width: 1280px) {
-  .w-24h {
-    width: 5%;
-  }
-}
-
-.w-7d {
-  width: 10%;
-}
-
-@media (min-width: 1280px) {
-  .w-7d {
-    width: 5%;
-  }
-}
-
-.w-volume {
-  width: 16%
-}
-
-@media (min-width: 1570px) {
-  .w-volume {
-    width: 18%;
-  }
-}
-
-@media (min-width: 1750px) {
-  .w-volume {
     width: 20%;
   }
 }
 
-.w-last7 {
-  width: 33%;
+.w-1h {
+  width: 14%;
 }
 
-@media (min-width: 640px) {
-  .w-last7 {
-    width: 22%;
+.w-24h {
+  width: 14%;
+}
+
+.w-7d {
+  width: 14%;
+}
+
+.w-volume {
+  width: 15%
+}
+
+@media (min-width: 1480px) {
+  .w-volume {
+    width: 17.5%;
   }
+}
+
+@media (min-width: 1820px) {
+  .w-volume {
+    width: 19.2%;
+  }
+}
+
+.w-circ {
+  width: 20%
+}
+
+.w-last7 {
+  width: 16%;
+  margin-left: 16px;
 }
 
 @media (min-width: 768px) {
   .w-last7 {
-    width: 15%;
-  }
-}
-
-@media (min-width: 1280px) {
-  .w-last7 {
-    width: 9%;
+    width: 8.8%;
+    margin-left: 0;
   }
 }
 
 @keyframes spin {
   to {
     transform: rotate(360deg)
-  }
-}
-
-.w-bank {
-  width: 15.3%;
-}
-
-.w-funds-add {
-  width: 100%;
-}
-
-@media (min-width: 1280px) {
-  .w-funds-add {
-    width: 84.7%;
-  }
-}
-
-.w-funds {
-  width: 100%;
-}
-
-@media (min-width: 1280px) {
-  .w-funds {
-    width: 60%;
-  }
-}
-
-.w-add {
-  width: 100%;
-}
-
-@media (min-width: 1280px) {
-  .w-add {
-    width: 40%;
-  }
-}
-
-.m-bank {
-  margin: 0 0 0 16px;
-}
-
-@media (min-width: 400px) {
-  .m-bank {
-    margin: 0 16px 0 16px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .m-bank {
-    margin: 0 0 0 16px;
   }
 }
 
