--- a/app/globals.css
+++ b/app/globals.css
@@ -275,13 +275,13 @@ path {
 
 @media (min-width: 640px) {
   .w-name {
-    width: 30%;
+    width: 32%;
   }
 }
 
 @media (min-width: 768px) {
   .w-name {
-    width: 20%;
+    width: 22%;
   }
 }
 
@@ -360,7 +360,7 @@ path {
 }
 
 .w-last7 {
-  width: 33%;
+  width: 30%;
 }
 
 @media (min-width: 640px) {
@@ -371,13 +371,65 @@ path {
 
 @media (min-width: 768px) {
   .w-last7 {
-    width: 15%;
+    width: 13%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .w-last7 {
+    width: 14%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .w-last7 {
+    width: 13.5%;
+  }
+}
+
+@media (min-width: 1545px) {
+  .w-last7 {
+    width: 11.5%;
+  }
+}
+
+@media (min-width: 1750px) {
+  .w-last7 {
+    width: 9%;
+  }
+}
+
+.w-last7-graph {
+  width: 33%;
+}
+
+@media (min-width: 640px) {
+  .w-last7-graph {
+    width: 43%;
+  }
+}
+
+@media (min-width: 768px) {
+  .w-last7-graph {
+    width: 29%;
   }
 }
 
 @media (min-width: 1280px) {
-  .w-last7 {
-    width: 9%;
+  .w-last7-graph {
+    width: 22.5%;
+  }
+}
+
+@media (min-width: 1545px) {
+  .w-last7-graph {
+    width: 18.7%;
+  }
+}
+
+@media (min-width: 1750px) {
+  .w-last7-graph {
+    width: 15%;
   }
 }
 
@@ -388,7 +440,7 @@ path {
 }
 
 .w-bank {
-  width: 15.3%;
+  width: 249px;
 }
 
 .w-funds-add {
